cli: make control chars in strings are escaped correctly for json output

We need to change json output escaping according to this
https://bugzilla.gnome.org/show_bug.cgi?id=730425

Signed-off-by: Maxim Anisimov <maxim.anisimov.ua@gmail.com>